# Hard

./: .gitignore  README.md  hard.cabal  hsimple.cabal  stack.yaml
src/Hard/: Map.hs
src/Hard/Map/: Fold.hs  Network.hs  Socks5.hs  Types.hs
src/Network/Hard/: Map.hs
src/Network/Hard/Map/: Fold.hs  Network.hs  Socks5.hs  Types.hs
src/Network/Hsimple/: Map.hs
src/Network/Hsimple/Map/: Fold.hs  Network.hs  Socks5.hs  Types.hs
